ops/dep/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwaf-test-2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /test
            backend:
              service:
                name: cwaf-test-1
                port:
                  number: 80
